feat: adding auth and Director's entity and controller

--- a/T1-APIREST/appsettings.json
+++ b/T1-APIREST/appsettings.json
@@ -9,5 +9,13 @@
 
   "ConnectionStrings": {
     "DevelopmentConnection": "Server=localhost\\SQLEXPRESS;Database=FilmsStore;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    //Llargada depen dels bits del hash: Hash256 -> 32 characters.
+    "Key": "clau-simetrica-encriptar-token-Minim-asdfasdfeaerwefasdgabaerawerqwerads",
+    "Audience": "films-api-clients",
+    "Issuer": "films-api",
+    "ExpirationMinutes": 60
   }
+
 }
